 
IF (QT_USE_FILE)
  INCLUDE(${QT_USE_FILE})
ENDIF (QT_USE_FILE)

INCLUDE_DIRECTORIES(
  ${VTK_INCLUDE_DIRS}
  )
#FIND_PACKAGE(ParaView REQUIRED)
#INCLUDE(${PARAVIEW_USE_FILE})
 ADD_PARAVIEW_PLUGIN(ICMSReader "1.0"
   SERVER_MANAGER_XML ICMSReader.xml
   SERVER_MANAGER_SOURCES vtkICMSReader.cxx
   REQUIRED_ON_SERVER
   )

